encode totoz url correctly